--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.4
+	adafruit/Adafruit Unified Sensor@^1.1.9
